Add general styles

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -7,3 +7,15 @@
     @apply text-gray-900;
   }
 }
+
+body {
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.color-primary {
+  color: #33bebc;
+}
+
+.bg-primary {
+  background-color: #33bebc;
+}
