--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -9,7 +9,8 @@
 }
 
 body {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Lato", "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 .color-primary {
