Use new font for the titles

--- a/assets/scss/_general-styles.scss
+++ b/assets/scss/_general-styles.scss
@@ -1,7 +1,11 @@
-
 body {
   font-family: "Lato", "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   background-color: var(--bg-color-primary);
   color: var(--text-color-primary);
+}
+
+h1 {
+  font-family: "Patua One", "Lato", "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+  "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
