Add text color seconday variable

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,5 +1,6 @@
 :root {
   --text-color-primary: #111827;
+  --text-color-secondary: #06080ec2;
   --color-primary: #33bebc;
   --color-secondary: #24a3a1;
   --bg-color-primary: #f9fafb;
