Import navbar file

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,6 +1,7 @@
 @import './variables';
 @import './general-styles';
 @import './social-links';
+@import './navbar';
 
 .color-primary {
   color: var(--color-primary);
