Change theme name

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -6,7 +6,7 @@
   --bg-color-primary: #f9fafb;
 }
 
-:root[theme='dark'] {
+:root[theme='crazy'] {
   --text-color-primary:#f9fafb;
   --bg-color-primary: #483d8b;
 }
