--- a/assets/scss/_general-styles.scss
+++ b/assets/scss/_general-styles.scss
@@ -2,10 +2,12 @@ body {
   font-family: "Lato", "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   background-color: var(--bg-color-primary);
-  color: var(--text-color-primary);
+  color: var(--text-color-secondary);
 }
 
 h1 {
   font-family: "Patua One", "Lato", "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
   "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  color: var(--text-color-primary);
+
 }
