--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -8,5 +8,13 @@
 
 :root[theme='crazy'] {
   --text-color-primary:#f9fafb;
+  --text-color-secondary:#f9fafb;
   --bg-color-primary: #483d8b;
+}
+
+:root[theme='dark'] {
+  --text-color-primary:#f9fafb;
+  --text-color-secondary:rgba(255, 255, 255, 0.8);
+  --color-primary: #cc925c;
+  --bg-color-primary: #1e1e1e;
 }
