--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -2,7 +2,7 @@
   --text-color-primary: #111827;
   --text-color-secondary: #06080ec2;
   --color-primary: #33bebc;
-  --color-secondary: #24a3a1;
+  --color-secondary: #6ee7b7;
   --bg-color-primary: #f9fafb;
 }
 
@@ -12,9 +12,10 @@
   --bg-color-primary: #483d8b;
 }
 
-:root[theme='dark'] {
+:root[theme='crazy'] {
   --text-color-primary:#f9fafb;
   --text-color-secondary:rgba(255, 255, 255, 0.8);
   --color-primary: #cc925c;
+  --color-secondary: #aa794a;
   --bg-color-primary: #1e1e1e;
 }
