--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -2,6 +2,7 @@
 @import './general-styles';
 @import './social-links';
 @import './navbar';
+@import './grids';
 
 .color-primary {
   color: var(--color-primary);
