--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -12,7 +12,7 @@
   --bg-color-primary: #483d8b;
 }
 
-:root[theme='crazy'] {
+:root[theme='dark'] {
   --text-color-primary:#f9fafb;
   --text-color-secondary:rgba(255, 255, 255, 0.8);
   --color-primary: #cc925c;
