Share h1 styles to h2 to h5

--- a/assets/scss/_general-styles.scss
+++ b/assets/scss/_general-styles.scss
@@ -5,7 +5,7 @@ body {
   color: var(--text-color-secondary);
 }
 
-h1 {
+h1, h2, h3, h4, h5 {
   font-family: "Patua One", "Lato", "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
   "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   color: var(--text-color-primary);
