--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,6 +1,7 @@
 :root {
   --text-color-primary: #111827;
   --text-color-secondary: #06080ec2;
+  --text-color-gray-900: #111827;
   --color-primary: #33bebc;
   --color-secondary: #6ee7b7;
   --bg-color-primary: #f9fafb;
