--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -2,6 +2,7 @@
   --text-color-primary: #111827;
   --text-color-secondary: #06080ec2;
   --text-color-gray-900: #111827;
+  --color-gray-100 :  #f3f4f6  ;
   --color-primary: #33bebc;
   --color-secondary: #6ee7b7;
   --bg-color-primary: #f9fafb;
