--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -14,6 +14,7 @@
   --text-color-secondary:#f9fafb;
   --bg-color-primary: #483d8b;
   --bg-card: #483d8b;
+  --bg-card:  #5b50a0 ;
 }
 
 :root[theme='dark'] {
@@ -22,4 +23,5 @@
   --color-primary: #cc925c;
   --color-secondary: #aa794a;
   --bg-color-primary: #1e1e1e;
+  --bg-card:  #272626 ;
 }
