Add bg-secondary class

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -11,7 +11,11 @@
 }
 
 .bg-primary {
-  background-color: var(--color-primary);
+  background-color: var(--color-primary) !important;
+}
+
+.bg-secondary {
+  background-color: var(--bg-color-primary) !important;
 }
 
 .no-outline {
