Import container component

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,6 +1,7 @@
 @import "vueperslides/dist/vueperslides.css";
 
 @import "./variables";
+@import "./container";
 @import "./general-styles";
 @import "./social-links";
 @import "./navbar";
