--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -19,3 +19,17 @@
 .no-outline {
   outline: none !important;
 }
+
+.text {
+  color: var(--text-color-gray-900);
+  outline: none;
+  transition: all 0.1s;
+  --shadow-color: #9ca3af;
+  box-shadow: 6px 6px 0px 1px var(--shadow-color);
+  margin-top: 0;
+}
+
+.text:focus {
+  transform: translate(2px, 2px);
+  box-shadow: 4px 4px 0px 1px var(--shadow-color);
+}
