Use imported grid

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,5 +1,6 @@
+@import "@jogarcia/mgrid/container.scss";
+
 @import "./variables";
-@import "./container";
 @import "./general-styles";
 
 .color-primary {
